fix spacing

--- a/src/systems/ec/implementations/vanilla/packages/ec-component-contextual-navigation/ec-component-contextual-navigation-print.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-contextual-navigation/ec-component-contextual-navigation-print.scss
@@ -16,7 +16,7 @@
   .ecl-contextual-navigation__label {
     color: $ecl-color-black-100;
     font: $ecl-font-print-m;
-    margin-right: $ecl-spacing-print-4-xl;
+    margin-right: $ecl-spacing-print-xl;
   }
 
   .ecl-contextual-navigation__list {
